--- a/package.json
+++ b/package.json
@@ -6,17 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve-json": "json-server --watch src/mock/db.json --port 3005"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/json-server": "^0.14.5",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/styled-components": "^5.1.27",
+    "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "react-hook-form": "^7.46.2",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.8",
+    "typescript": "5.2.2",
+    "yup": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.26",
+    "@types/redux": "^3.6.0"
   }
 }
